[package]
name = "winmine"
version = "0.1.0"
edition = "2024"
publish = false

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1

[dependencies]
windows-sys = { version = "0.61.2", features = [
	"Win32_Media_Audio",
	"Win32_Data_HtmlHelp",
] }
bitflags = "2.11.1"
strum = "0.28"
strum_macros = "0.28"

[dependencies.winsafe]
git = "https://github.com/rodrigocfd/winsafe.git"
rev = "bf62085b18037db1e756b8052513d616ef819e22"
features = [
	"advapi",
	"comctl",
	"dshow",
	"dwm",
	"dxgi",
	"gdi",
	"gui",
	"kernel",
	"mf",
	"ole",
	"oleaut",
	"psapi",
	"shell",
	"taskschd",
	"user",
	"uxtheme",
	"version",
	"wininet",
	"winspool"
]

[build-dependencies]
embed-resource = "3.0.8"
