[package]
name = "winmine"
version = "0.1.0"
edition = "2024"
publish = false

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1

[dependencies]
windows-sys = { version = "0.61.2", features = [
	"Win32_Media_Audio",
] }
bitflags = "2.13.0"
strum = "0.28"
strum_macros = "0.28"

[dependencies.winsafe]
git = "https://github.com/rodrigocfd/winsafe.git"
rev = "d5939db734330f8721dd234e0d22d545686a3ca1"
features = [
	"advapi",
	"comctl",
	"dshow",
	"dwm",
	"dxgi",
	"gdi",
	"gui",
	"htmlhelp",
	"kernel",
	"mf",
	"ole",
	"oleaut",
	"psapi",
	"shell",
	"taskschd",
	"user",
	"uxtheme",
	"version",
	"wininet",
	"winspool"
]

[build-dependencies]
embed-resource = "3.0.9"
