[package]
name = "winmine-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "winmine_rust"
crate-type = ["staticlib"]

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1

[dependencies]
windows-sys = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_System_Registry",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Security",
] }
