[package]
name = "winmine-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "winmine_rust"
crate-type = ["staticlib"]

[profile.dev]
incremental = true

[profile.release]
lto = true
codegen-units = 1

[dependencies]
windows-sys = { version = "0.61.2", features = [
	"Win32_Foundation",
	"Win32_Media_Audio",
	"Win32_System_Registry",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Security",
	"Win32_System_SystemServices",
	"Win32_System_SystemInformation",
	"Win32_System_LibraryLoader",
	"Win32_System_WindowsProgramming",
	"Win32_System_Diagnostics_Debug",
	"Win32_Data_HtmlHelp",
	"Win32_UI_Shell",
] }
